# ai-shaker-demo

./: .env.example  .gitignore  attendance_sheets.html  cashflow_api.html  expense_freee.html  expense_sheets.html  guide_customer.html  guide_operator.html  index.html  line_complete_d.html  order_legacy.html  pyproject.toml  requirements.txt  schedule_api.html
app/: database.py  main.py
app/api/: dashboard_api.py  line_handler.py  menu_factory_api.py
app/browser/: factory_dashboard.html  menu_factory.html
app/models/: core.py
app/schemas/: deploy.py  menu_factory.py  tenant.py  ticket.py
app/services/: ai_client.py  base_plugin.py  deploy_service.py  file_extractor.py  menu_factory_service.py
app/services/plugins/: expense_auditor.py  hr_management.py  line_complete.py  onboarding_plugin.py  schedule_ai.py
