[tool.poetry]
name = "smartexec"
version = "0.1.0"
description = "SmartExec - AI Shaker Backend"
authors = ["AI Shaker"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = "^0.135.1"}
uvicorn = {extras = ["standard"], version = "^0.42.0"}
sqlalchemy = "^2.0.48"
pydantic = "^2.12.5"
python-dotenv = "^1.2.2"
httpx = "^0.28.1"
google-generativeai = "^0.8.6"
pdfminer-six = "^20260107"
python-docx = "^1.2.0"
chardet = "^7.2.0"
python-multipart = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
